--- a/FlaskFrontEnd/FlaskServer.ipynb
+++ b/FlaskFrontEnd/FlaskServer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -42,44 +42,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "[2019-10-23 17:51:18,077] ERROR in app: Exception on / [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 2446, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1951, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1820, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
-      "    raise value\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1949, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\app.py\", line 1935, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-7-05dc636a7dd4>\", line 5, in hello\n",
-      "    return render_template('app/frontend/Home.html')\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\templating.py\", line 138, in render_template\n",
-      "    ctx.app.jinja_env.get_or_select_template(template_name_or_list),\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 869, in get_or_select_template\n",
-      "    return self.get_template(template_name_or_list, parent, globals)\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 830, in get_template\n",
-      "    return self._load_template(name, self.make_globals(globals))\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\jinja2\\environment.py\", line 804, in _load_template\n",
-      "    template = self.loader.load(self, name, globals)\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\jinja2\\loaders.py\", line 113, in load\n",
-      "    source, filename, uptodate = self.get_source(environment, name)\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\templating.py\", line 60, in get_source\n",
-      "    return self._get_source_fast(environment, template)\n",
-      "  File \"C:\\Users\\oconn\\Anaconda3\\lib\\site-packages\\flask\\templating.py\", line 89, in _get_source_fast\n",
-      "    raise TemplateNotFound(template)\n",
-      "jinja2.exceptions.TemplateNotFound: app/frontend/Home.html\n",
-      "127.0.0.1 - - [23/Oct/2019 17:51:18] \"\u001b[1m\u001b[35mGET / HTTP/1.1\u001b[0m\" 500 -\n"
+      "127.0.0.1 - - [23/Oct/2019 17:53:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
     "app = fl(__name__)\n",
     "\n",
+    "## Gives working directory for webpage\n",
     "@app.route('/')\n",
     "def hello():\n",
     "    return render_template('app/frontend/Home.html')\n",
