Adding to  index.html and js files

--- a/FlaskFrontEnd/FlaskServer.ipynb
+++ b/FlaskFrontEnd/FlaskServer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,8 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [23/Oct/2019 17:53:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [09/Dec/2019 13:04:59] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [09/Dec/2019 13:04:59] \"\u001b[37mGET /static/JavaScript.js HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
