--- a/FlaskFrontEnd/FlaskServer.ipynb
+++ b/FlaskFrontEnd/FlaskServer.ipynb
@@ -10,15 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Importing Flask as fl\n",
-    "\n",
     "from flask import Flask as fl\n",
-    "from flask import render_template\n",
-    "\n"
+    "from flask import render_template\n"
    ]
   },
   {
@@ -42,8 +40,8 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [09/Dec/2019 13:04:59] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [09/Dec/2019 13:04:59] \"\u001b[37mGET /static/JavaScript.js HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [10/Dec/2019 17:05:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [10/Dec/2019 17:05:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -58,6 +56,13 @@
     "if __name__ == '__main__': \n",
     "    app.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
