Fixed issue with flask server in jupyter lab, Added to model.py to create model.json for use on webapp

--- a/FlaskFrontEnd/FlaskServer.ipynb
+++ b/FlaskFrontEnd/FlaskServer.ipynb
@@ -5,47 +5,43 @@
    "metadata": {},
    "source": [
     "## Flask Server\n",
-    "Adapated from http://flask.palletsprojects.com/en/1.1.x/tutorial/"
+    "Adapated from http://flask.palletsprojects.com/en/1.1.x/tutorial/<br>\n",
+    "Adapted from: https://github.com/ianmcloughlin/random-web-app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Importing Flask as fl\n",
     "from flask import Flask as fl\n",
-    "from flask import render_template\n"
+    "from flask import render_template\n",
+    "\n",
+    "## Numpy \n",
+    "import numpy as np\n",
+    "\n",
+    "## base64 from encoding \n",
+    "import base64\n",
+    "\n",
+    "## Tensorflow to use the model.h5\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "## PIL is a %%python imaging library\n",
+    "from PIL import ImageOps, Image\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [10/Dec/2019 17:05:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [10/Dec/2019 17:05:36] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# This section runs the Main application \n",
     "app = fl(__name__)\n",
     "\n",
     "## Gives working directory for webpage\n",
@@ -53,23 +49,42 @@
     "def hello():\n",
     "    return render_template('app/frontend/Home.html')\n",
     "\n",
-    "if __name__ == '__main__': \n",
-    "    app.run()"
+    "    if __name__ == '__main__': \n",
+    "        app.run()\n",
+    "        \n",
+    "    # getting uploaded image from the js \n",
+    "@app.route('/image', methods=['GET', 'POST'])\n",
+    "def image():\n",
+    "    # retirve image from  request\n",
+    "    userImage = fl.request.values['image']\n",
+    "    \n",
+    "    print(userImage)\n",
+    "    \n",
+    "    decodedImage = base64.b64decode(image[22:])\n",
+    "    \n",
+    "    with open (\"image.png\", \"wb\") as f:\n",
+    "        f.write(decodedImage)\n",
+    "        \n",
+    "    model = load_model()\n",
+    "        \n",
+    "    #prediction_array = model.predict(image_to_predict)\n",
+    "    #prediction = np.argmax(prediction_array)\n",
+    "  \n",
+    "    print(prediction)\n",
+    "    return{\"prediction\": str(prediction)}\n",
+    "    \n",
+    "    def load_model():\n",
+    "        jsonModel = open('model.json', 'r')\n",
+    "        loadModel = jsonModel.read()\n",
+    "        jsonModel.close()\n",
+    "        loadedModel = tf.keras.models.model_from_json(loadModel)\n",
+    "        \n",
+    "        loadedModel.load_weights('model.h5')\n",
+    "        print('Loaded')\n",
+    "        return loadedModel\n",
+    "    \n",
+    " "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
