Adding Notebooks explaining all python files

--- a/Notebooks/FlaskServer.ipynb
+++ b/Notebooks/FlaskServer.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load model loads the JSON File thta contains the model and returns the model.\n",
+    "# Load model loads the JSON File that contains the model and returns the model.\n",
     "def load_model():\n",
     "    jsonModel = open('model.json', 'r')\n",
     "    loadModel = jsonModel.read()\n",
